# ThirdParty-HSL

./: .gitattributes  .gitignore  CoinHslConfig.h  CoinHslConfig.h.in  INSTALL.HSL  Makefile.am  Makefile.in  README.md  coinhsl-uninstalled.pc.in  coinhsl.pc.in  compile  config.h.in  config_coinhsl.h.in  config_coinhsl_default.h  config_hsl.h.in  configure  configure.ac  dummy.c  hsl.pc.in  hsl_addlibs.txt.in  metis_adapter.c
trunk/: Makefile.in  configure  configure.ac
